# cattorch

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
cattorch/: __init__.py  tokenizer.py  transpiler.py
cattorch/templates/adaptive_avg_pool2d/: algorithm.txt  template.json
cattorch/templates/avg_pool2d/: algorithm.txt  template.json
cattorch/templates/batchnorm/: template.json
cattorch/templates/bpe_tokenizer/: template.json
cattorch/templates/cat/: template.json
cattorch/templates/char_tokenizer/: template.json
cattorch/templates/conv2d/: algorithm.txt  template.json
cattorch/templates/elu/: template.json
cattorch/templates/embedding/: template.json
cattorch/templates/gelu/: template.json
cattorch/templates/getitem/: template.json
cattorch/templates/layernorm/: template.json
cattorch/templates/leaky_relu/: template.json
cattorch/templates/masked_fill/: template.json
cattorch/templates/matmul/: template_tensor.json
cattorch/templates/max_pool2d/: algorithm.txt  template.json
cattorch/templates/mean/: template.json
cattorch/templates/processing_tools/: prepare_template.py
cattorch/templates/relu/: template.json
cattorch/templates/rms_norm/: template.json
cattorch/templates/rsqrt/: template.json
cattorch/util/: argument.py  scope.py
cattorch/util/instruction/: cat.py  (+25 more)
src/cattorch/: transpiler.py
src/tests/: catgpt1.py  simple_matmul.py  simple_neural_net.py
tests/: catgpt1.py  simple_matmul.py  simple_neural_net.py  softmax.py  tensor.py  test_llms.py  test_tokenizer.py  test_transpile.py
(+36 files in other folders)
