[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cattorch"
version = "0.2.1"
description = "Export PyTorch modules to Scratch sprites"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["pytorch", "scratch", "neural-network", "transpiler"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Repository = "https://github.com/NormallyNormal/cattorch"

[tool.setuptools.packages.find]
include = ["cattorch*"]

[tool.setuptools.package-data]
cattorch = ["templates/**/*.json", "templates/**/*.svg"]
